--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,11 @@
 /* Toast Animation */
 @keyframes slide-in {
   from {
-    transform: translateX(100%);
+    transform: scale(0.8);
     opacity: 0;
   }
   to {
-    transform: translateX(0);
+    transform: scale(1);
     opacity: 1;
   }
 }
